Multiple fixes. Spacing sizes are moved to confiig.styl.

--- a/config.styl
+++ b/config.styl
@@ -2,19 +2,19 @@
  * Variables
  * ======================================================================== */
 
-DEBUG            ?= true
-DPI              ?= 72
-DIRECTION        ?= ltr
-PI               ?= 3.141592653589793
+DEBUG             = true
+DPI               = 72
+DIRECTION         = ltr
+PI                = 3.141592653589793
 
-$path_font       ?= '../font/'
-$path_img        ?= '../img/'
+$path_font        = '../font/'
+$path_img         = '../img/'
 
 
-$base_font_size           ?= 14px
-$base_line_height_ratio   ?= 1.5
-$base_line_height         ?= floor($base_line_height_ratio * $base_font_size)
-$base_transition_diration ?= .15s
+$base_font_size            = 16px
+$base_line_height_ratio    = 1.5
+$base_line_height          = floor($base_line_height_ratio * $base_font_size)
+$base_transition_diration  = .15s
 
 $base_font_families       = {
     sans: ('Helvetica Neue' 'Helvetica Arial' sans-serif)
@@ -22,4 +22,14 @@ $base_font_families       = {
     mono: ('Consolas' 'Courier New' monospace)
 }
 
-$base_body_width          ?= 940px
+
+/**
+ * Spacing size
+ */
+$space_start         = unit(4px / $base_font_size, 'rem')
+$space_factor        = 2
+$space_size_types    = ('xs' 's' 'm' 'l' 'x' 'xl' 'xxl')
+$space               = {}
+
+for $_type, $_i in $space_size_types
+    $space[$_type] = $space_start * ($space_factor ** $_i)
